app/client/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-ui
  namespace: chat-etendo
spec:
  selector:
    app: chatbot-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
