app/client/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ui
  namespace: chat-etendo
spec:
  rules:
    - host: chat.preview.etendo.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-ui
                port:
                  name: http
